<resources>
    <string name="app_name">Composition</string>
    <string name="button_go">GO!</string>
    <string name="title_choose_level">Выберите уровень:</string>
    <string name="level_beginner">Начальный</string>
    <string name="level_light">ЛЕГКИЙ</string>
    <string name="level_middle">СРЕДНИЙ</string>
    <string name="level_hard">СЛОЖНЫЙ</string>

    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="game_over">Game over!</string>
    <string name="count_right_answ">Необходимое количество правильных ответов: %s</string>
    <string name="your_count">Ваш счет %s</string>
    <string name="need_pers_riqht_answ">Необходимый процент правильных ответов: %s</string>
    <string name="pers_riqht_answ">Процент правильных ответов: %s</string>
    <string name="try_again">Попробовать снова</string>
    <string name="text_7">7</string>
    <string name="text_question">~?</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>

</resources>