<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ChooseLevelFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_choose_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/title_choose_level"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_level_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_light"
            android:text="@string/level_beginner"
            android:textColor="@color/black"
            android:textSize="24dp" />

        <Button
            android:id="@+id/button_level_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green_yellow"
            android:text="@string/level_light"
            android:textColor="@color/black"
            android:textSize="24dp" />

        <Button
            android:id="@+id/button_level_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/light_grey"
            android:text="@string/level_middle"
            android:textColor="@color/black"
            android:textSize="24dp" />

        <Button
            android:id="@+id/button_level_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/level_hard"
            android:textColor="@color/black"
            android:textSize="24dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>

