<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.GameFragment">

    <TextView
        android:id="@+id/tv_tiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00" />

    <TextView
        android:id="@+id/tv_sum"
        style="@style/QuestionTextStyle"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:background="@drawable/ic_circle"
        android:text="@string/text_1"
        app:layout_constraintBottom_toTopOf="@+id/tv_left_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_left_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        style="@style/QuestionTextStyle"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_1"
        app:layout_constraintEnd_toStartOf="@+id/tv_question"
        app:layout_constraintDimensionRatio="?android:attr/scrollbarSize"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sum"
        android:text="@string/text_7" />

    <TextView
        android:id="@+id/tv_question"
        style="@style/QuestionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:text="@string/text_question"
        app:layout_constraintBottom_toBottomOf="@+id/tv_left_number"
        app:layout_constraintDimensionRatio="?android:attr/scrollbarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_left_number"
        app:layout_constraintTop_toTopOf="@+id/tv_left_number" />

    <TextView
        android:id="@+id/tv_option_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/OptionTextStyle"
        android:background="@android:color/holo_green_light"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_4"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_1" />

    <TextView
        android:id="@+id/tv_option_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/OptionTextStyle"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_4"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_6"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/tv_option_4"
        android:text="@string/text_2" />

    <TextView
        android:id="@+id/tv_option_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/OptionTextStyle"
        android:background="@android:color/holo_purple"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_option_5"
        android:text="@string/text_3" />

    <TextView
        android:id="@+id/tv_option_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/OptionTextStyle"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_4" />

    <TextView
        android:id="@+id/tv_option_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/OptionTextStyle"
        android:background="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_6"
        app:layout_constraintStart_toEndOf="@+id/tv_option_4"
        android:text="@string/text_5" />

    <TextView
        android:id="@+id/tv_option_6"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/text_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/tv_option_5" />

    <TextView
        android:id="@+id/tv_answers_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/tv_left_number"
        app:layout_constraintBottom_toTopOf="@+id/progress_bar"
        android:text="@string/progress_answers" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:secondaryProgressTint="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_answers_progress"
        />
</androidx.constraintlayout.widget.ConstraintLayout>